    functionality beyond what pbmtojbg and jbgtopbm already do, which
    use the full library instead.)

Changes to the original full library from version 1.6:

  - the arithmetic codec routines are now located in a separate source
    file (they are now used by both the full and the T.85 library, and
    might also be of use to other applications)

  - added encoder support for adding comment marker segment

  - added encoder option for using SDRST marker instead of SDNORM
    (only useful to make encoder able to generate a wider range
    of test data)

  - added pbmtojbg options -C and -r, which provide command-line
    access to the previous two extensions

  - slightly improved diagnostic output of jbgtopbm option -d

  - non-English translations of error messages are now provided
    in a separate PO file (e.g., for use with GNU gettext),
    jbg_strerror() no longer has a language attribute and the
    JBG_EN, JBG_DE_8859_1, JBG_DE_UTF_8 constants no longer exist

  - pbmtojbg has new option -f as a shortcut for all the options
    needed to make the output comply to the basic ITU-T T.85 fax
    profile

  - jbg_dec_getwidth(), jbg_dec_getheight(), jbg_dec_getsize(), and
    jbg_dec_getsize_merged() return now an unsigned long value
    (was: long), and return 0 (was: -1) if no image is available yet

  - jbgtopbm now outputs image dimensions in header padded to 10
    digits fixed width, for consistency with jbgtopbm85
    to allow for later in-place update of height due to NEWLEN

Changes in version 1.6 (2004-06-11)

  - various small changes to reduce the risk of 32-bit unsigned
    integer overflows when dealing with extremely large images

  - robuster treatment of L0 = 0xffffffff

  - minor API modification in jbg_enc_options(): parameter l0 changed
    from type long to unsigned long; previous value now remains
    unchanged when l0 == 0 (was: l0 < 0)

  - lots of type casts added such that the C source code is now
    also compilable as C++
