@@ -36,6 +36,10 @@ Changes to the original full library from version 1.6:
     file (they are now used by both the full and the T.85 library, and
     might also be of use to other applications)
 
+  - internal interface changes to arithmetic decoder (to enable
+    handling of the peak-ahead needed to handle T.85-style NEWLEN
+    after the final stripe)
+
   - added encoder support for adding comment marker segment
 
   - added encoder option for using SDRST marker instead of SDNORM
